change images to align text appropriately, added respective divs to contain score and eventually display result of each round

--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,13 @@ h1 {
     text-align: center;
     color: crimson;
 }
+
+body {
+    background-color: rgb(38,0,110);
+}
+
+.rps-choices {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 50px;
+}
