--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,20 @@ button {
     border-radius: 10px;
 }
 
+.initiate {
+    padding: 60px 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.start-button {
+    background-color: green;
+    border-width: 3px;
+    padding: 10px 20px;
+    font-size: 20px;
+    color: #211338;
+    font-weight: bold;
+}
 
 .rps-choices {
     display: flex;
