--- a/styles.css
+++ b/styles.css
@@ -37,3 +37,24 @@ button {
     justify-content: space-evenly;
     padding-top: 50px;
 }
+
+.score-container {
+    display: flex;
+    flex-direction: column;
+    margin: 16px;
+}
+
+
+.score {
+    color: rgb(207, 142, 68);
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.score-headline {
+    font-size: 22px;
+    text-decoration: underline;
+    color: crimson;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
