--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+* {
+    font-family: courier;
+}
+
 h1 {
     font-size: 36px;
     text-decoration: underline;
     text-align: center;
-    color: crimson;
+    color: #486e00;
+    font-weight: bold;
 }
 
 body {
@@ -35,7 +40,7 @@ button {
 .rps-choices {
     display: flex;
     justify-content: space-evenly;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 
 .score-container {
@@ -54,7 +59,31 @@ button {
 .score-headline {
     font-size: 22px;
     text-decoration: underline;
-    color: crimson;
+    color: #486e00;
     font-weight: bold;
     margin-bottom: 10px;
+}
+
+.round-end-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.round-choice {
+    color: #486e00;
+    margin: 5px;
+    font-size: 25px;
+    margin: auto;
+}
+
+.rock-hover, .paper-hover, .scissors-hover {
+    transform: scale(1.05); /* Slightly scale up on hover, adjust as needed */
+}
+
+.rock-clicked, .paper-clicked, .scissors-clicked {
+    transform: scale(0.95); /* Slight scale down effect */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Smaller shadow when clicked */
 }
